--- a/awwwards/templates/index.html
+++ b/awwwards/templates/index.html
@@ -39,6 +39,7 @@
                 <ul>
                     <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'profile' %}">Profile</a></li>
+                    <li><a href="{% url 'update' %}"> Update Profile</a></li>
                 </ul>
             </nav>
         </header>
