--- a/awwwards/templates/profile.html
+++ b/awwwards/templates/profile.html
@@ -8,16 +8,10 @@
             <div class="hero-slider owl-carousel">
                 <div class="hs-item set-bg sp-pad" data-setbg="{% static 'img/hero-slider/1.jpg' %}">
                     <div class="hs-text">
-                        <h2 class="hs-title">Hey {{user.username}}</h2>
-                        <p class="hs-des">{{user.profile.bio}}</p>
+                        <h2 class="hs-title"><i id="avatar" class=" center-align fa fa-user-circle" img src="{{profile.avatar}}"></i> {{user.username}}</h2>
+                        <p class="hs-des">{{profile.email}}</p>
+                        <p class="hs-des">{{profile.description}}</p>
                     </div>
                 </div>
-                <div class="hs-item set-bg sp-pad" data-setbg="{% static 'img/hero-slider/2.jpg' %}">
-                    <div class="hs-text">
-                 <h2 class="hs-title">Hey {{user.username}}</h2>
-                        <p class="hs-des">{{user.profile.bio}}</p>
-                    </div>
-                </div>
-            </div>
         </section>
 {%endblock%}
