--- a/awwwards/static/css/main.css
+++ b/awwwards/static/css/main.css
@@ -58,7 +58,7 @@ html {
 }
 
 * {
-  padding:initial;
+  padding:0;
   margin: 0;
 }
 
@@ -416,7 +416,7 @@ input {
 }
 
 .card-3 {
-  background: #000;
+  background: #fff;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
@@ -443,16 +443,4 @@ input {
   .card-3 {
     display: block;
   }
-  .card-3 .card-heading {
-    display: block;
-    width: 100%;
-    padding-top: 400px;
-    background-position: center center;
-  }
-  .card-3 .card-body {
-    display: block;
-    width: 100%;
-    padding: 37px 30px;
-    padding-bottom: 45px;
-  }
-}
+
