--- a/awwwards/templates/index.html
+++ b/awwwards/templates/index.html
@@ -40,6 +40,7 @@
                     <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'profile' %}">Profile</a></li>
                     <li><a href="{% url 'update' %}"> Update Profile</a></li>
+                    <li><a href="{% url 'new_project' %}"> Submit Project</a></li>
                 </ul>
             </nav>
         </header>
