--- a/awwwards/templates/post_project.html
+++ b/awwwards/templates/post_project.html
@@ -4,24 +4,24 @@
 {% block content %}
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
             <div class="card text-center">
                     <div class="card-body">
-                      <h5 class="card-title">Update Profile</h5>
+                      <h5 class="card-title">Submit Your Project</h5>
                    
                         <hr>
                         <form class="" action="" method="post" enctype="multipart/form-data">
                             {% csrf_token %}
                             {% bootstrap_form form %}
                         <div class="form-group">
-                            <input type="submit" class="btn btn-primary" value="Update Profile">
+                            <input type="submit" class="btn btn-primary" value="Submit Project">
                         </div>
                      </form>
                 </div>
             </div>
     </div>
-    <div class="col-md-4"></div>
+    <div class="col-md-2"></div>
   </div>
 </div>
 {% endblock %}
