--- a/awwwards/static/css/main.css
+++ b/awwwards/static/css/main.css
@@ -416,14 +416,7 @@ input {
 }
 
 .card-3 {
-  background: #fff;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
-  width: 100%;
+  background: #000;
   display: table;
 }
 
