--- a/awwwards/templates/index.html
+++ b/awwwards/templates/index.html
@@ -27,8 +27,8 @@
 
         <!-- Navbar section start -->
         <header class="header-section sp-pad">
-            <h3 class="site-logo">HALO</h3>
-            <form class="search-top">
+            <h3 class="site-logo">Awwwards</h3>
+            <form class="search-top" action="{% url 'search'%}">
                 <button class="se-btn"><i class="fa fa-search"></i></button>
                 <input type="text" placeholder="Search.....">
             </form>
@@ -48,39 +48,50 @@
 
 
         <!-- Header section start -->
+    <div class="row">
+        <div class="col-md1-12 col-lg-12 col-sm-12 mb-3">
         <section class="hero-section">
             <div class="hero-slider owl-carousel">
                 <div class="hs-item set-bg sp-pad" data-setbg="{% static 'img/hero-slider/1.jpg' %}">
                     <div class="hs-text">
-                        <h2 class="hs-title">Halo</h2>
-                        <p class="hs-des">We Create Awesome <br>Photographies and more</p>
+                        <h2 class="hs-title">Awwwards</h2>
+                        <p class="hs-des">Rates projects based on <br>Usability, Content and Design</p>
                     </div>
                 </div>
                 <div class="hs-item set-bg sp-pad" data-setbg="{% static 'img/hero-slider/2.jpg' %}">
                     <div class="hs-text">
-                        <h2 class="hs-title">Halo</h2>
-                        <p class="hs-des">We Create Awesome <br>Photographies and more</p>
+                        <h2 class="hs-title">Awwwards</h2>
+                        <p class="hs-des">Joi us and rate projects submitted by other users <br>Better yet submit a project to be rated</p>
                     </div>
                 </div>
             </div>
         </section>
+    </div>
+</div>
         <!-- Header section end -->
 
-        <!-- Portfolio section start -->
-        <section class="portfolio-section">
-            <div class="portfolio-warp">
-                <!-- single item -->
-                <div class="single-portfolio set-bg" data-setbg="{% static 'img/portfolio/1.jpg' %}">
-                    <a href="single-work.html" class="portfolio-info">
-                        <div class="pfbg set-bg" data-setbg="{% static 'img/portfolio/1.jpg' %}"></div>
-                        <h5>Summer in the desert</h5>
-                        <p>Landscape Photography</p>
-                    </a>
-                </div>
-            </div>
-            <div class="clearfix"></div>
-        </section>
-        <!-- Portfolio section end -->
+        <!-- Project section start -->
+<h3 class="text-center header">Projects</h3>
+<div class="row">
+        {% for project in projects %}
+    
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="clearfix">
+    
+          <strong><p>{{project.title}}</p></strong>
+          <a href=""> <img src="{{project.image.url}}" class="img-responsive" alt="Image"></a>
+          <p>{{project.description}}</p>
+        </div>
+      </div>
+        {% empty %}
+    
+        <h3 class="text-center">There are no Projects yet</h3>
+    
+       {% endfor %}
+    </div>
+    
+</div>
+        <!-- Project section end -->
 
         <!-- Footer section start -->
         <footer class="footer-section spad">
