--- a/awwwards/templates/index.html
+++ b/awwwards/templates/index.html
@@ -75,12 +75,13 @@
 <div class="row">
         {% for project in projects %}
     
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-4">
             <div class="clearfix">
     
           <strong><p>{{project.title}}</p></strong>
           <a href=""> <img src="{{project.image.url}}" class="img-responsive" alt="Image"></a>
           <p>{{project.description}}</p>
+          <p><a href="{{project.link}}">View on live site</a></p>
         </div>
       </div>
         {% empty %}
@@ -89,8 +90,7 @@
     
        {% endfor %}
     </div>
-    
-</div>
+
         <!-- Project section end -->
 
         <!-- Footer section start -->
