--- a/awwwards/templates/search.html
+++ b/awwwards/templates/search.html
@@ -8,26 +8,25 @@
             <div class="hero-slider owl-carousel">
                 <div class="hs-item set-bg sp-pad" data-setbg="{% static 'img/hero-slider/1.jpg' %}">
                     <div class="hs-text">
-                        <h2 class="hs-title"></i> {{user.username}}</h2>
-                        <p class="hs-des">{{profile.email}}</p>
-                        <p class="hs-des">{{profile.description}}</p>
+                              <div class="row">
+                                {% if projects%}
+                                  <h2>Found {{ projects|length }} of searched term {{message}}</h2>
+                                {% else %}
+                                  <h2 > Found 0 projects for the search term</h2>
+                                {% endif %}
+                              </div>
+                            
+                              <div class="row">                          
+                              {% if projects %}
+                                {% for project in projects %}
+                                  <div class="col-sm-6 col-md-6">
+                                      <a href="/projectdetails/{{project.id}}"><h1>{{project.title}}</h1></a>
+                                  </div>
+                                {% endfor %}
+                              {% endif %}
+                              </div>
+                            </div>                      
                     </div>
                 </div>
         </section>
-
-        <!-- Project section start -->
-        <section class="portfolio-section">
-            <div class="portfolio-warp">
-                <!-- single item -->
-                <div class="single-portfolio set-bg" data-setbg="{% static 'img/portfolio/1.jpg' %}">
-                    <a href="single-work.html" class="portfolio-info">
-                        <div class="pfbg set-bg" data-setbg="{% static 'img/portfolio/1.jpg' %}"></div>
-                        <h5>Summer in the desert</h5>
-                        <p>Landscape Photography</p>
-                    </a>
-                </div>
-            </div>
-            <div class="clearfix"></div>
-        </section>
-        <!-- Project section end -->
 {%endblock%}
