--- a/awwwards/templates/project.html
+++ b/awwwards/templates/project.html
@@ -30,7 +30,7 @@
                                           {% csrf_token %}
                                           {% bootstrap_form form %}
                                       <div class="form-group">
-                                          <input type="submit" class="btn btn-primary" value="Update Profile">
+                                          <input type="submit" class="btn btn-primary" value="Rate Project">
                                       </div>
                                    </form>
                               </div>
