--- a/awwwards/templates/registration/base.html
+++ b/awwwards/templates/registration/base.html
@@ -1,49 +1,41 @@
 {% load bootstrap4 %}
 {% load staticfiles %}
-<html lang="en">
 
-<head>
-    <!-- Required meta tags-->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <title>Awwwards</title>
+        <meta charset="UTF-8">
 
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
 
-    <!-- Title Page-->
-    <title>Awwwards registration</title>
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/flaticon.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/animate.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
 
-    <!-- Icons font CSS -->
-    <link href="{% static 'vendor/mdi-font/css/material-design-iconic-font.min.css' %}" rel="stylesheet" media="all">
-    <link href="{% static 'vendor/font-awesome-4.7/css/font-awesome.min.css' %}" rel="stylesheet" media="all">
-    <!-- Font special for pages-->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    </head>
+    <body>
+        <!-- Page Preloder -->
+        <div id="preloder">
+            <div class="loader"></div>
+        </div>
+        <!-- Block content section -->
+        {% block content%}
 
-    <!-- Vendor CSS-->
-    <link href="{% static 'vendor/select2/select2.min.css' %}" rel="stylesheet" media="all">
-    <link href="{% static 'vendor/datepicker/daterangepicker.css' %}" rel="stylesheet" media="all">
+        {% endblock%}
+        <!-- End content section -->
 
-    <!-- Main CSS-->
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-</head>
-
-<body>
-
-  {% block content %}  {%endblock%}
-
-
-  {% block scripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- Jquery JS-->
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <!-- Vendor JS-->
-    <script src="{% static 'vendor/select2/select2.min.js' %}"></script>
-    <script src="{% static 'vendor/datepicker/moment.min.js' %}"></script>
-    <script src="{% static 'vendor/datepicker/daterangepicker.js' %}"></script>
-
-    <!-- Main JS-->
-    <script src="{% static 'js/global.js' %}"></script>
-    {% bootstrap_javascript %}
-  {% endblock %}
-
-</body>
-
-</html>
+        <!--====== Javascripts & Jquery ======-->
+        <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+        <script src="{% static 'js/mixitup.min.js' %}"></script>
+        <script src="{% static 'js/circle-progress.min.js' %}"></script>
+        <script src="{% static 'js/main.js' %}"></script>
+    </body>
+    </html>
