--- a/awwwards/templates/registration/login.html
+++ b/awwwards/templates/registration/login.html
@@ -1,42 +1,28 @@
-{%extends "registration/base.html"%}
+{% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
-<div class="container">
-    <div class="row">
-        <!-- empty div -->
-        <div class="col-md-4"></div>
-            <div class="col-md-4 col-sm-4 col-lg-4">
-                {% if form.errors %}
-                    <p>Password or Username is incorrect</p>
-                {% endif %}
-                <div class="page-wrapper bg-gra-01 p-t-180 p-b-100 font-poppins">
-                        <div class="wrapper wrapper--w780">
-                            <div class="card card-3">
-                                <div class="card-heading"></div>
-                                <div class="card-body">
-                                    <h2 class="title">Log in</h2>
-                                    <form  action="/accounts/login/" method="post">
-                                        {% csrf_token %}
-                                        {% bootstrap_form form%}
-                                        <br>
-                                        <div class="form-group">
-                                          <input type="submit" class="btn btn-primary btn-sm" value="Login">
-                                        </div>
-
-                                        <input type="hidden" name="next" value="{{next}}">
-
-                                      </form>
-                                      <hr>
-                                      <a href="/accounts/register">Create an account</a>
-                                </div>
-                            </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+            <div class="card text-center">
+                    <div class="card-body">
+                      <h5 class="card-title">Update Profile</h5>
+                   
+                        <hr>
+                        <form class="accounts/login" action="" method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {% bootstrap_form form %}
+                        <div class="form-group">
+                            <input type="submit" class="btn btn-primary" value="Log In">
                         </div>
+                     </form>
+                     Don't have an account? <a href="/accounts/register">Register Here</a>
                 </div>
             </div>
-                <!-- empty div -->
-            <div class="col-md-4"> </div>
-        </div>
     </div>
-    {% endblock %}
-
+    <div class="col-md-2"></div>
+  </div>
+</div>
+{% endblock %}
 
