--- a/awwwards/templates/base.html
+++ b/awwwards/templates/base.html
@@ -28,7 +28,7 @@
         <!-- Navbar section start -->
         <header class="header-section sp-pad">
             <h3 class="site-logo">Awwwards</h3>
-            <form class="search-top">
+            <form class="search-top" action="{% url 'search'%}">
                 <button class="se-btn"><i class="fa fa-search"></i></button>
                 <input type="text" placeholder="Search.....">
             </form>
