--- a/awwwards/templates/project.html
+++ b/awwwards/templates/project.html
@@ -12,6 +12,7 @@
                         <p class="hs-des">{{project.description}}</p>
                         <p class="hs-des">Design:{{project.design}} Content:{{project.content}} Usability:{{project.usability}}</p>
                         <p class="hs-des">Total votes:{{project.vote_submissions}}</p>
+                        <p class="hs-des">Overral Score:{{rating}}</p>
                     </div>
                 </div>
         </section>
