Deployment to heroku

--- a/awwwards/templates/index.html
+++ b/awwwards/templates/index.html
@@ -62,7 +62,7 @@
                 <div class="hs-item set-bg sp-pad" data-setbg="{% static 'img/hero-slider/2.jpg' %}">
                     <div class="hs-text">
                         <h2 class="hs-title">Awwwards</h2>
-                        <p class="hs-des">Joi us and rate projects submitted by other users <br>Better yet submit a project to be rated</p>
+                        <p class="hs-des">Join us and rate projects submitted by other users <br>Better yet submit a project to be rated</p>
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
         <!-- Header section end -->
 
         <!-- Project section start -->
-<h3 class="text-center header">Projects</h3>
+<h3 class="text-center header"> Featured Projects</h3>
 <div class="row">
         {% for project in projects %}
     
