--- a/awwwards/templates/project.html
+++ b/awwwards/templates/project.html
@@ -8,7 +8,7 @@
             <div class="hero-slider owl-carousel">
                 <div class="hs-item set-bg sp-pad" data-setbg="{% static 'img/hero-slider/1.jpg' %}">
                     <div class="hs-text">
-                        <h2 class="hs-title"><i id="avatar" class=" center-align fa fa-user-circle" img src="{{profile.avatar}}"></i> {{project.title}}</h2>
+                        <h6 ><i id="avatar" class=" center-align fa fa-user-circle" img src="{{profile.avatar}}"></i> {{project.title}}</h6>
                         <p class="hs-des">{{project.description}}</p>
                         <p class="hs-des">Design:{{project.design}} Content:{{project.content}} Usability:{{project.usability}}</p>
                         <p class="hs-des">Total votes:{{project.vote_submissions}}</p>
